log
Thu 09 May 2024 03:06:52 PM UTC: 
 tests:  1|8
total_score: 0/70
c319ea9
Thu 09 May 2024 03:18:05 PM UTC: 
 treemap.c | 8 +++++---
 1 file changed, 5 insertions(+), 3 deletions(-)
 tests:  4|7
total_score: 5/70
11d25ec
Thu 09 May 2024 03:19:11 PM UTC: 
 treemap.c | 24 +++++++++++++++++++++++-
 1 file changed, 23 insertions(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:51:26: error: expected ‘;’ before ‘}’ token
   51 |         tree->root = node
      |                          ^
      |                          ;
   52 |     } else {
      |     ~                     
Compilation failed
6a58609
Thu 09 May 2024 03:22:05 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|7
total_score: 5/70
689c1d2
Thu 09 May 2024 03:31:29 PM UTC: 
 treemap.c | 10 ++++++++--
 1 file changed, 8 insertions(+), 2 deletions(-)
 tests:  0|0
71258c2
Thu 09 May 2024 03:33:10 PM UTC: 
 treemap.c | 34 ++++++++++++++++++++--------------
 1 file changed, 20 insertions(+), 14 deletions(-)
 tests:  3|7
total_score: 5/70
1cc0538
